refactor: 코드리뷰 반영 — Stream.toList(), eq() 통일, 컨트롤러 응답 검증 강화, viewedByMe 통합 테스트 추가